--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -12,6 +12,9 @@ SQLAlchemy==1.3.1
 urllib3==1.24.1
 Werkzeug==0.14.1
 oauthlib==3.0.1
-pyOpenSSL==19.0.0
+pyOpenSSL==20.0.0
 Flask-Login==0.4.1
 flask-talisman==0.7.0
+loguru==0.5.3
+boto3==1.16.33
+mime==0.1.0
