--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,20 +1,25 @@
 certifi==2019.3.9
 chardet==3.0.4
-click==6.7
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
 idna==2.8
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.1.1
-requests==2.21.0
+requests==2.25.0
 SQLAlchemy==1.3.1
-urllib3==1.24.1
-Werkzeug==0.14.1
 oauthlib==3.0.1
 pyOpenSSL==20.0.0
 Flask-Login==0.4.1
 flask-talisman==0.7.0
 loguru==0.5.3
-boto3==1.16.33
+boto3==1.16.25
 mime==0.1.0
+botocore==1.19.25
+click==7.1.2
+jmespath==0.10.0
+Pillow==8.0.1
+s3transfer==0.3.3
+six==1.15.0
+urllib3==1.26.2
+Werkzeug==0.14.1
